fix(TDP-4726): vertical align for IE11

--- a/dataprep-webapp/src/app/components/suggestions-stats/actions-suggestions/_action-suggestions.scss
+++ b/dataprep-webapp/src/app/components/suggestions-stats/actions-suggestions/_action-suggestions.scss
@@ -77,14 +77,15 @@ $search-actions-height: 25px;
 	}
 
 	.filters-actions-form {
-		display: flex;
-		align-items: center;
-		justify-content: flex-start;
 		flex-basis: 30px;
 		flex-grow: 0;
 		flex-shrink: 0;
+
+		display: flex;
+		align-items: center;
+		justify-content: flex-start;
 		background-color: #DDDDDD;
-		right: 10px;
+		//right: 10px;
 		padding: 0 10px;
 
 		&.ng-enter {
@@ -113,8 +114,6 @@ $search-actions-height: 25px;
 
 		> span,
 		label {
-			display: inline-flex;
-			align-items: center;
 			font-weight: 600;
 			font-size: 0.8em;
 			text-transform: none;
